# scikit-gmsh

./: .all-contributorsrc  .flake8  .pre-commit-config.yaml  .readthedocs.yaml  API.md  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  LICENSE  Makefile  README.md  README.rst  SECURITY.md  cylinder.py  noxfile.py  packages.txt  pyproject.toml  readme.py  release.yml  requirements.txt  requirements_test.txt  sample.py  setup.py  sphere.msh  streamlit_app.py  t15.py  test.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  maintenance-request.yml
.github/workflows/: auto-approve.yml  draft-pdf.yml  labeler.yml  publish-to-pypi.yml  style_docstr.yml  testing-and-deployment.yml  update-pr-branch.yml
branding/logo/logomark/: LICENSE
docs/: api.md  conf.py  index.md  index.rst  overview.rst  requirements.txt
docs/_static/: CREDITS  LICENSE
docs/_templates/: function.rst
examples/: __init__.py  basics.py  better_cell_size.py  boolean.py  capsule.py  cylinder.py  delaunay.py  geospatial_mesh.py  geospatial_simple.py  holes_in_volumes.py  icosahedron.py  polygon_with_hole.py  quad.geo  quad.py  shell_i_beam.py  sphere.py  t11.py  tutorial1.py
face_or_vase_ata/: AUTHOR
joss/: paper.md
pages/: 01_examples.py
pvgmsh/: __init__.py  _version.py
src/pvgmsh/: __init__.py  __main__.py  _version.py
src/skgmsh/: __init__.py  geospatial.py
src/skgmsh/examples/: boolean.py
tests/: __init__.py  test_gmsh.py  test_pvgmsh.py  test_skgmsh.py
