[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  'gmsh<4.12.3',
  'meshio<5.3.6',
  'pygmsh<7.1.18',
  'pyvista[all]<0.44.2',
  'scooby<0.9.3',
  'setuptools<69.0.4',
  'shapely<2.0.6',
]

[project]
dependencies = [
  'gmsh<4.12.3',
  'meshio<5.3.6',
  'pygmsh<7.1.18',
  'pyvista[all]<0.44.2',
  'scooby<0.9.3',
  'shapely<2.0.6',
]
dynamic = ["readme", "version"]
name = "scikit-gmsh"
requires-python = '>=3.9'

[project.optional-dependencies]
docs = [
  'myst-parser==4.0.0',
  'pydata-sphinx-theme==0.15.4',     # Do not upgrade, see https://github.com/pyvista/pyvista/pull/7095
  'sphinx-book-theme==1.1.3',
  'sphinx-copybutton==0.5.2',
  'sphinx-design==0.6.1',
  'sphinx-gallery==0.17.1',
  'sphinx-toolbox==3.8.0',
  'sphinx==8.0.2',
]
test = ['pytest==8.0.0']

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
ignore_missing_imports = true
strict = true
warn_unreachable = true

[tool.poetry]
authors = ["Tetsuo Koyama"]
description = "PyVista accessors for Gmsh to generate 3D finite element mesh"
name = "scikit-gmsh"
readme = "README.md"
version = "0.0.0"

[tool.pytest.ini_options]
addopts = ["--showlocals", "--strict-config", "--strict-markers", "-ra"]
filterwarnings = ["error", 'ignore::DeprecationWarning']
log_cli_level = "info"
minversion = "6.0"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
line-length = 150

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["COM812", "D203", "D212", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = true
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["INP001"]
"examples/**" = ["D205", "D400", "D415", "INP001", "T201"]
"tests/**" = ["INP001", "S101"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
version = { attr = 'skgmsh.__version__' }
