[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  'gmsh<4.13.2',
  'meshio<5.3.6',
  'pyvista[all]<0.44.3',
  'scooby<0.10.1',
  'setuptools<77.0.4',
  'shapely<2.0.8',
  'uv',
]

[project]
dependencies = [
  'gmsh<4.13.2',
  'meshio<5.3.6',
  'pyvista[all]<0.44.3',
  'scooby<0.10.1',
  'shapely<2.0.8',
  'uv',
]
dynamic = ["readme", "version"]
name = "scikit-gmsh"
requires-python = '>=3.9'

[project.optional-dependencies]
docs = [
  'myst-parser==4.0.0',
  'pydata-sphinx-theme==0.15.4', # Do not upgrade, see https://github.com/pyvista/scikit-gmsh/pull/446
  'sphinx-book-theme==1.1.4',
  'sphinx-copybutton==0.5.2',
  'sphinx-design==0.6.1',
  'sphinx-gallery==0.19.0',
  'sphinx-toolbox==3.9.0',
  'sphinx==8.0.2',
]
test = ['pytest==8.3.5']

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
ignore_missing_imports = true
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = ["--showlocals", "--strict-config", "--strict-markers", "-ra"]
filterwarnings = ["error", 'ignore::DeprecationWarning']
log_cli_level = "info"
minversion = "6.0"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
line-length = 150

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["COM812", "D203", "D212", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = true
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["INP001"]
"examples/**" = ["D205", "D400", "D415", "INP001", "T201"]
"tests/**" = ["INP001", "S101"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
version = { attr = 'skgmsh.__version__' }
